converting Long improved